cluster/apps/media/nextcloud/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    istio-injection: enabled
