cluster/apps/media/nextcloud/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
  namespace: nextcloud
spec:
  parentRefs:
    - name: external-gateway
      namespace: istio-system
      sectionName: https
  hostnames: ["cloud.akchristiansen.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: nextcloud
spec:
  parentRefs:
    - name: external-gateway
      namespace: istio-system
      sectionName: http
  hostnames: ["cloud.akchristiansen.com"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dav-redirect
  namespace: nextcloud
spec:
  parentRefs:
    - name: external-gateway
      namespace: istio-system
      sectionName: https
  hostnames: ["cloud.akchristiansen.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/carddav
        - path:
            type: PathPrefix
            value: /.well-known/caldav
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /remote.php/dav
            statusCode: 302
